# flask-app

./: README.md  cloudbuild.yaml  gke.yaml  pyproject.toml  requirements.txt  supervisor.conf  uwsgi.ini  wsgi.py
