[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["YuZhanHuang <bigjoe1992111@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.2"
uWSGI = "^2.0.20"
supervisor = "^4.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
